# nota_corretagem

./: .gitignore  nota_corretagem.py  pyproject.toml
demonstracao/: demo.py  demonstracao.ipynb
